<?xml version="1.0"?>

<resources>

    <string name="app_name">Netsum Reminder</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_create_note">Create Note</string>

    <string name="title">title</string>

    <string name="detail">detail</string>

    <string name="alarm">alarm</string>
    <string name="notify">notify</string>
    <string name="nothing">nothing</string>

    <string name="title_activity_information">Information</string>

    <string name="title_activity_edit__note">Edit Note</string>

    <string name="New">Create New Note</string>

    <string name="back">Back to Main</string>

    <string name="save">Save Note</string>

    <string name="edit">Edit Note</string>

    <string name="discard">Discard Note</string>

    <string name="note_type_text">Type:</string>

    <string name="title_activity_alert">Alert</string>

    <string name="Not_Set">Not Set</string>

    <string name="hour_minutes">HH:mm</string>

    <string name="alert_title">title</string>

    <string name="alert_title_create">title_create</string>

    <string name="Alertnotifty">"Alert: "</string>

    <string name="delete_title">Delete Selected Task</string>

    <string name="delete_message">Are you sure?</string>

    <string name="yes">Yes</string>

    <string name="no">No</string>

    <string name="row_id">rowID</string>

    <string name="alarm_active">An Alert can be added!</string>

    <string name="title_hint">Enter Task</string>

    <string name="hint_description">Enter Task Description</string>

    <string name="set_alert">Set Alert</string>

    <string name="set_notify">Set Notification</string>

    <string name="set_nothing">No Alert</string>

    <string name="textview_date">Select Date</string>

    <string name="txt_time">Enter Time:</string>

    <string name="txt_edit_hint">Enter Title</string>

    <string name="detail_hint">Enter Description</string>

    <string name="type_note">Note Type:</string>

    <string name="view_title">Large Text</string>

    <string name="view_detail">Medium Text</string>

    <string name="note_type">Medium Text</string>

    <string name="type_list_entry">Small Text</string>

    <string name="time_vie">testtime</string>

    <string name="alarm_text">Alert: </string>

    <string name="dateformate">dd/MM/yyyy</string>

    <string name="Not_Set_Alert">Not Set</string>

    <string name="ok">Ok</string>

    <string name="alert_content">alert_content</string>

    <string name="question_alert">Do U Want to Set Alert?</string>

    <string name="question_noify">Do U Want to Notify?Choose Notify</string>

    <string name="alert_text">Alert:</string>

    <string name="okey">Okey</string>

    <string name="delay">Delay</string>

    <string name="delayMessage">Alarm Delayed for 5 Minutes</string>

    <string name="setMusic">Please Select a Music From The List</string>

    <string name="action_set_ringtone">Set Ringtone</string>

</resources>