<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EditNote">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txttitle"
                    android:maxLength="30"
                    android:hint="@string/txt_edit_hint"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:editable="true" />

            </android.support.design.widget.TextInputLayout>



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView5" >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/description"
                        android:hint="@string/detail_hint"
                        android:layout_below="@+id/txttitle"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:singleLine="false"
                        android:editable="true"
                        android:lines="5" />
                </android.support.design.widget.TextInputLayout>

            </ScrollView>

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/type_note"
                    android:id="@+id/txtNoteType"
                    android:layout_below="@+id/description"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerNoteType"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radioGroup">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioAlarm"
                        android:text="@string/set_alert"
                        android:textSize="18sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioNotify"
                        android:text="@string/set_notify"
                        android:textSize="18sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioNothing"
                        android:text="@string/set_nothing"
                        android:textSize="18sp"/>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textview_date"
                    android:id="@+id/txt_selectdate" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePicker2"
                    android:layout_below="@+id/chkbox"
                    android:layout_centerHorizontal="true"
                    android:calendarViewShown="false"
                    android:layout_gravity="center_horizontal"
                   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/txt_time"
                    android:id="@+id/txt_selecttime" />

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timePicker2"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
