<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateNote">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerNoteType"
            android:layout_alignParentBottom="true">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etTitle"
                    android:maxLength="25"
                    android:textColor="@android:color/holo_orange_dark"
                    android:hint="@string/title_hint"
                    android:layout_below="@+id/btnBack"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:editable="true" />
            </android.support.design.widget.TextInputLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView4" >

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <EditText
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/etDescription"
                       android:hint="@string/hint_description"
                       android:layout_below="@+id/txttitle"
                       android:layout_alignParentLeft="true"
                       android:textColor="@android:color/holo_orange_dark"
                       android:layout_alignParentStart="true"
                       android:layout_alignParentRight="true"
                       android:layout_alignParentEnd="true"
                       android:singleLine="false"
                       android:editable="true"
                       android:lines="5"
                       android:maxLength="140"
                       android:nestedScrollingEnabled="false"
                       />
               </android.support.design.widget.TextInputLayout>
            </ScrollView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

              <RadioGroup
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/radioGroup">
                  <RadioButton
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/radioAlarm"
                      android:text="@string/set_alert"
                      android:textSize="18sp"/>
                  <RadioButton
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/radioNotify"
                      android:text="@string/set_notify"
                      android:textSize="18sp"/>
                  <RadioButton
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/radioNothing"
                      android:text="@string/set_nothing"
                      android:textSize="18sp"/>
              </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textview_date"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:id="@+id/txtDate" />

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="true"
                    android:id="@+id/datePicker"
                    android:layout_margin="10dp"
                    android:spinnersShown="false"
                    android:clickable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_time"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:id="@+id/txtTime" />

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timePicker"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
