<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="3dp"
            android:layout_toLeftOf="@+id/type"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="71"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="0.24"
            android:text="@string/type_list_entry"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_blue_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="3dp"
            android:layout_toStartOf="@+id/alarmImage"
            android:layout_toLeftOf="@+id/alarmImage"
            android:layout_weight="0.73"
            android:text="@string/detail"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_orange_dark" />

        <ImageView
            android:id="@+id/alarmImage"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignBottom="@+id/time"
            android:layout_gravity="right"
            android:layout_toStartOf="@+id/time"
            android:layout_toLeftOf="@+id/time"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_alarms" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="@string/time_vie"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/holo_red_dark" />

    </RelativeLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:text="testdate"/>

</LinearLayout>
