<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/alarmImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/noalert"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing"
                android:id="@+id/type"
                android:textSize="12sp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:padding="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/date"
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13/6/2017"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.24"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:gravity="right"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="3dp"
                    android:layout_toStartOf="@+id/time"
                    android:layout_toLeftOf="@+id/time"
                    android:layout_weight="0.73"
                    android:text="@string/detail"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18:00"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:gravity="right"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#E0E0E0" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/notId"
        android:visibility="gone"/>

</LinearLayout>